--- a/test.env
+++ b/test.env
@@ -1,17 +1,17 @@
 # Database Configuration
-DATABASE_USERNAME=your_db_usernamemar
-DATABASE_PASSWORD=your_db_password
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=your_db_name
+DB_HOST=localhost
+DB_PORT=5433
+DB_USERNAME=postgres
+DB_PASSWORD=root
+DB_DATABASE_NAME=markable_test
 
 # Application Configuration
 APP_PORT=8080
-AUTH_SECRET=your_auth_secret
+AUTH_SECRET=secret
 AUTH_EXPIRY_PERIOD=3600
 
 # Swagger Configuration
-SWAGGER_HOST_URL=local.api.
+SWAGGER_HOST_URL=local.api.markable.co
 SWAGGER_HOST_SCHEME=https
-SWAGGER_USERNAME=swagger_user
-SWAGGER_PASSWORD=swagger_password
+SWAGGER_USERNAME=root
+SWAGGER_PASSWORD=root
